# MoonShot

./: CMakeLists.txt  LICENSE  MoonShotCMakeConfig.h.in  README.md  trim.cxx  trim.hxx
image/: CMakeLists.txt  image.cxx  image.hxx
